--- a/paint.html
+++ b/paint.html
@@ -15,6 +15,8 @@
     html, body {
       margin:0;
       padding:0;
+      width: 100%;
+      height: 100%;
     }
     /*#background {
           clear: both;
@@ -163,7 +165,7 @@
       }
       $("#alphaColors").empty();
       for (var i = 0; i < baseColors.length; i++) {
-        var a = i/(baseColors.length+1) + 1/(baseColors.length+1);
+        var a = i/(baseColors.length) + 1/(baseColors.length);
         var color = Color(Color.parse(baseColor).hexTriplet(), a).rgba();
         // color = color.rgba();
         var pick = $("<button />").attr({
