--- a/paint.html
+++ b/paint.html
@@ -12,11 +12,18 @@
   <script src="http://meemoo.org/meemoo/meemoo.js"></script>
   
   <style type="text/css">
-    html, body {
-      margin:0;
-      padding:0;
-      width: 100%;
-      height: 100%;
+    html {
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      margin: 0;
+      padding: 0;
+    }
+    #canvi {
+      background-image: url('alphabg.png');
+      display: inline-block;
+      margin-bottom: 10px;
     }
     #onionskin {
       z-index: 0;
@@ -26,12 +33,8 @@
       position: absolute;
       top: 0px;
       left: 0px;
-      border: 1px dotted #eee;
     }
     #colors {
-      margin-top: 5px;
-      border: 1px solid #FFF;
-      border-width: 1px 0 0 1px;
     }
     #colors, #selectedColor, #baseColors, #lightnessColors, #alphaColors {
       font-size: 10px;
@@ -67,7 +70,7 @@
 </head>
 <body>
   
-  <div>
+  <div id="canvi">
     <canvas id="onionskin" width="320" height="240"></canvas>
     <canvas id="paint" width="320" height="240"></canvas>
   </div>
