--- a/paint.html
+++ b/paint.html
@@ -270,6 +270,11 @@
       var tool = this;
       this.started = false;
 
+      var hex = Color.parse(selectedColor).hexTriplet();
+      this.c1 = Color(hex, .1).rgba();
+      this.c2 = Color(hex, .05).rgba();
+      this.c3 = Color(hex, 0).rgba();
+
       // This is called when you start holding down the mouse button.
       // This starts the pencil drawing.
       this.mousedown = function (e) {
@@ -284,12 +289,11 @@
           // draw shape
           var half = Math.ceil(lineWidth/2);
           var radgrad = cContext.createRadialGradient(e.pageX, e.pageY, 0, e.pageX, e.pageY, half);
-          radgrad.addColorStop( 0, Color(Color.parse(selectedColor).hexTriplet(), .1).rgba() );
-          radgrad.addColorStop( 1-blur, Color(Color.parse(selectedColor).hexTriplet(), .05).rgba() );
-          radgrad.addColorStop( 1, Color(Color.parse(selectedColor).hexTriplet(), 0).rgba() );
+          radgrad.addColorStop( 0, tool.c1 );
+          radgrad.addColorStop( 1-blur, tool.c2 );
+          radgrad.addColorStop( 1, tool.c3 );
           cContext.fillStyle = radgrad;
           cContext.fillRect(e.pageX-half, e.pageY-half, lineWidth, lineWidth);
-          console.log(radgrad);
         }
       };
 
